# protobuf_not_included

./: .bazelrc  BUILD  MODULE.bazel  README.md  WORKSPACE  test.cpp  test.proto
sub/: BUILD  other_test.cpp
